# hobbes

./: Dockerfile  README.md  development.env  docker-compose.yml  log_conf.yaml  pyproject.toml  run_service.sh
.github/workflows/: aws-to-ecr.yml
alembic/: env.py
hobbes/: apis_v1.py  crud.py  db_manager.py  iam.py  ldap_authorizer.py  main.py  models.py  task_db_manager.py  tasks.py  teams.py  worker.py
hobbes/core/: service_iam.py  tasks.py
hobbes/db/: task_db_manager.py
hobbes/flower_templates/: login.html
hobbes/models/: artifact_models.py  artifacts_model.py  models.py
hobbes/routers/: apis_v1.py  auth.py  teams.py
hobbes/services/: artifacts_crud.py  crud.py  pf_crud.py
tests/: conftest.py  test_main.py
