[project]
name = "hobbes"
version = "0.1.0"
description = ""
authors = [
    {name = "Paolo Audiberti",email = "paolo.audiberti@methodstudios.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.23,<0.0.24)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "tomli (==2.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.25.3"
pytest = "^8.3.5"
ruff = "^0.9.9"

