[project]
name = "hobbes"
version = "1.2.1"
description = ""
authors = [
    {name = "Paolo Audiberti",email = "pta200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlmodel (==0.0.25)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "gevent (>=25.9.1,<26.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.25.3"
pytest = "^8.3.5"
ruff = "^0.9.9"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"


