[project]
name = "hobbes"
version = "1.2.1"
description = ""
authors = [
    {name = "Paolo Audiberti",email = "pta200@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlmodel (==0.0.25)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "gevent (>=25.9.1,<26.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.25.3"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
bandit = "^1.9.4"
pip-audit = "^2.10.0"
isort = "^8.0.1"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"


[tool.bandit]
exclude_dirs = ["tests", "alembic", ".venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]


[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    # The following are specific to Black, you probably don't want those.
    tests/data/
    | profiling/
)
'''

[tool.isort]
profile = "black"